# graduation-project

./: CMakeLists.txt  plot-creator.py
good-cases/tournament-selection/: progress_1.txt  progress_10.txt  progress_13.txt  progress_14.txt  progress_15.txt  progress_19.txt  progress_20.txt  progress_21.txt  progress_22.txt  progress_24.txt  progress_25.txt  progress_26.txt  progress_27.txt  progress_28.txt  progress_29.txt  progress_3.txt  progress_30.txt  progress_31.txt  progress_32.txt  progress_33.txt  progress_34.txt  progress_35.txt  progress_36.txt  progress_37.txt  progress_38.txt  progress_39.txt  progress_4.txt  progress_40.txt  progress_41.txt  progress_42.txt  progress_43.txt  progress_44.txt  progress_45.txt  progress_46.txt  progress_47.txt  progress_48.txt  progress_49.txt  progress_7.txt  progress_8.txt
include/: CONSTANTS.h  agents.h  arena.h  gen.h  gen_crossover.h  gen_fitness.h  gen_mutation.h  gen_selection.h  minimaxH.h  toguz.h
src/: agents.cpp  arena.cpp  gen.cpp  gen_crossover.cpp  gen_fitness.cpp  gen_mutation.cpp  gen_selection.cpp  main.cpp  minimaxH.cpp  toguz.cpp
wrong-cases/1-increase of population size from 500 to 1000/: progress_0.txt  progress_1.txt  progress_10.txt  progress_11.txt  progress_12.txt  progress_13.txt  progress_14.txt  progress_15.txt  progress_16.txt  progress_17.txt  progress_18.txt  progress_19.txt  progress_2.txt  progress_20.txt  progress_21.txt  progress_22.txt  progress_23.txt  progress_24.txt  progress_25.txt  progress_26.txt  progress_27.txt  progress_28.txt  progress_29.txt  progress_3.txt  progress_30.txt  (+13 more)
(+36 files in other folders)
